fix: Correção do Dockerfile da API
